--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
         <ul class="nparts">
             <a href="#"><li>about</li></a>
             <a href="#"><li>project</li></a>
-            <a href="#"><li>project</li></a>
+            <a href="#"><li>skills</li></a>
             <a href="#"><li>leave a message!</li></a>
         </ul>
     </nav>
+    <div class="about-page">
+        <div class="aboutsec">
+            <h2>hey buddies i'm eklavya</h2>
+        </div>
+        <div class="ppbox">
+            <div class="pp">
+                <img src="ben.jpeg" alt="" class="ppic">
+            </div>
+        </div>
+        <div class="apara">
+            <p>Hey! I'm Eklavya, a student at VIT bhopal who's incredibly excited about software development and UX design. with a background in computer science, I'm well equipped with a technical skillset and an eagerness to experiment!</p>
+        </div>
+    </div>
 </body>
 </html>
