Made changes in about section

--- a/index.html
+++ b/index.html
@@ -7,27 +7,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="#" class="logo"><div>Eklavya</div></a>
-        <ul class="nparts">
-            <a href="#"><li>about</li></a>
-            <a href="#"><li>project</li></a>
-            <a href="#"><li>skills</li></a>
-            <a href="#"><li>leave a message!</li></a>
-        </ul>
-    </nav>
-    <div class="about-page">
-        <div class="aboutsec">
-            <h2>hey buddies i'm eklavya</h2>
+
+    <div class="navdiv">
+        <nav class="navbar">
+            <a href="#" class="logo"><div>Eklavya</div></a>
+            <ul class="nparts">
+                <a href="#"><li>about</li></a>
+                <a href="#project-page"><li>project</li></a>
+                <a href="#skills-page"><li>skills</li></a>
+                <a href="#message-page"><li>leave a message!</li></a>
+            </ul>
+        </nav>
+    </div>
+
+
+    <section id="about-page">
+        <div class="greet">
+           <p>hey buddies i'm eklavya</p>
         </div>
         <div class="ppbox">
             <div class="pp">
                 <img src="ben.jpeg" alt="" class="ppic">
             </div>
         </div>
-        <div class="apara">
-            <p>Hey! I'm Eklavya, a student at VIT bhopal who's incredibly excited about software development and UX design. with a background in computer science, I'm well equipped with a technical skillset and an eagerness to experiment!</p>
+        <div class="paragraph-box">
+            <div class="paragraph">
+                <p>Hey! I'm Eklavya, a student at VIT bhopal who's incredibly excited about software development and UX design. with a background in computer science, I'm well equipped with a technical skillset and an eagerness to experiment! <br><br> Outside of career and academics, I enjoy playing volleyball, making videos, watching anime, and lifting weights!</p>
+            </div>
         </div>
-    </div>
+    </section>
+
+
+    <section id="project-page"></section>
+
+
+    <section id="skills-page"></section>
+
+
+    <section id="message-page"></section>
+
+
+
+
 </body>
 </html>
