Made changes skills section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eklavya</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -35,13 +36,32 @@
                 <p>Hey! I'm Eklavya, a student at VIT bhopal who's incredibly excited about software development and UX design. with a background in computer science, I'm well equipped with a technical skillset and an eagerness to experiment! <br><br> Outside of career and academics, I enjoy playing volleyball, making videos, watching anime, and lifting weights!</p>
             </div>
         </div>
+        <div class="apps">
+            <a href=""><i class="fa-brands fa-instagram" id="insta"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin" id="linked"></i></a>
+            <a href=""><i class="fa-brands fa-github" id="github"></i></a>
+            <a href=""><i class="fa-brands fa-discord" id="discord"></i></a>
+        </div>
     </section>
 
 
-    <section id="project-page"></section>
+    <section id="project-page">
+        <p>Project</p>
+    </section>
 
 
-    <section id="skills-page"></section>
+    <section id="skills-page">
+        <div class="sk">
+            <p>Skills</p>
+        </div>
+        <div class="sapps">
+            <i class="fa-brands fa-python"></i>
+            <i class="fa-brands fa-java"></i>
+            <i class="fa-brands fa-js"></i>
+            <i class="fa-brands fa-html5"></i>
+            <i class="fa-brands fa-css"></i>
+        </div>
+    </section>
 
 
     <section id="message-page"></section>
