Made changes in colors

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="navdiv">
         <nav class="navbar">
             <a href="#" class="logo"><div>Eklavya</div></a>
-            <ul class="nparts">
-                <a href="#"><li>about</li></a>
-                <a href="#project-page"><li>project</li></a>
-                <a href="#skills-page"><li>skills</li></a>
-                <a href="#message-page"><li>leave a message!</li></a>
+            <ul class="nav-parts">
+                <a href="#"><li>About</li></a>
+                <a href="#project-page"><li>Project</li></a>
+                <a href="#skills-page"><li>Skills</li></a>
+                <a href="#message-page"><li>Contact</li></a>
             </ul>
         </nav>
     </div>
@@ -24,7 +24,7 @@
 
     <section id="about-page">
         <div class="greet">
-           <p>hey buddies i'm eklavya</p>
+           <p>Hey buddies, I'm Eklavya</p>
         </div>
         <div class="ppbox">
             <div class="pp">
